[package]
name = "gdeflate"
version = "0.1.1"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A library for compressing and decompressing the GDeflate format"
homepage = "https://github.com/projectkml/gdeflate-rs"
repository = "https://github.com/projectkml/gdeflate-rs"
documentation = "https://docs.rs/gdeflate"
readme = "README.md"
keywords = ["deflate", "gdeflate", "zlib"]
categories = ["compression"]
license = "MIT/Apache-2.0"
include = [
    "src/*.cpp",
    "src/*.h",
    "src/*.rs",
    "vendor/*",
    "Cargo.toml",
    "build.rs"
]

[dependencies]
cxx = "1.0.102"
thiserror = "1.0.44"

[build-dependencies]
cxx-build = "1.0.102"