[package]
name = "gdeflate"
version = "0.3.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A library for compressing and decompressing the GDeflate format"
homepage = "https://github.com/projectkml/gdeflate-rs"
repository = "https://github.com/projectkml/gdeflate-rs"
documentation = "https://docs.rs/gdeflate"
readme = "README.md"
keywords = ["deflate", "gdeflate", "zlib"]
categories = ["compression"]
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
    "vendor/*",
    "Cargo.toml",
    "build.rs"
]

[dependencies]
gdeflate-sys = "0.3.0"
serde = { version = "1.0", optional = true, default-features = false }
thiserror = "1.0.57"

[features]
default = []