[package]
name = "gdeflate-sys"
version = "0.3.0"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A library for compressing and decompressing the GDeflate format"
homepage = "https://github.com/projectkml/gdeflate-rs"
repository = "https://github.com/projectkml/gdeflate-rs"
documentation = "https://docs.rs/gdeflate"
readme = "README.md"
keywords = [ "compression", "decompression", "deflate" ]
categories = [ "api-bindings", "compression", "decompression" ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/libdeflate/libdeflate.h",
    "vendor/libdeflate/common/*",
    "vendor/libdeflate/lib/*",
]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"

[profile.release]
opt-level = 3
codegen-units = 1

lto = true