[package]
name = "gdeflate-sys"
version = "0.4.1"
edition = "2021"

authors = [ "Lorenz Klaus <beastle9end@outlook.de>", "Marlon Klaus <marlon.klaus@icloud.com>" ]
description = "A library for compressing and decompressing the GDeflate format"
homepage = "https://github.com/projectkml/gdeflate-rs"
repository = "https://github.com/projectkml/gdeflate-rs"
documentation = "https://docs.rs/gdeflate"
readme = "README.md"
keywords = [ "compression", "decompression", "deflate" ]
categories = [ "api-bindings", "compression", "decompression" ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/*.rs",
    "gen/bindings.rs",
    "build.rs",
    "Cargo.toml",
    "vendor/libdeflate/libdeflate.h",
    "vendor/libdeflate/common/*",
    "vendor/libdeflate/lib/*",
]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
cc = "1.0.90"

[features]
default = []
generate_bindings = ["bindgen"]

[profile.release]
opt-level = 3
codegen-units = 1

lto = true